Bug 128629 - FILESAVE: PDF: gif image is rotated 180 degrees
Summary: FILESAVE: PDF: gif image is rotated 180 degrees
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-11-06 12:35 UTC by Xisco Faulí
Modified: 2019-11-27 12:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
pdf file (9.68 KB, application/pdf)
2019-11-06 12:35 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-06 12:35:57 UTC
Created attachment 155576 [details]
pdf file

Steps to reproduce:
1. Open attachment 46801 [details] from bug 37282
2. Save it as PDF
3. Open the new created file, the gif image is upside down

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: ee909ca2c02f949605f68720c3f1eef658502749
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-11-06 12:37:08 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=dd4a67084853a030bf4b9f1f85d728620e0604a5

author	Miklos Vajna <vmiklos@collabora.com>	2019-10-08 09:16:27 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2019-10-08 14:31:32 +0200
commit dd4a67084853a030bf4b9f1f85d728620e0604a5 (patch)
tree 2fe01d5939ee5e1b4f127243561efc56e792b1d6
parent ef2ec07b4113fdadf863352c832af657b5ae205c (diff)
vcl: avoid downscale && upscale in DrawTransformedBitmapEx()

Bisected with: bibisect-linux64-6.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2019-11-26 08:04:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8dde8f9768f0dab97cdd30e3116f7e4d737c482f

tdf#128629 vcl DrawTransformedBitmapEx: do scaling for flipped bitmaps

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-11-26 11:59:06 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/de0924073824e1e38d35f78f5f8de2a4feceae8e

tdf#128629 vcl DrawTransformedBitmapEx: do scaling for flipped bitmaps

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-11-27 12:14:32 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 3a6f270edfffb97763927b2732feacedbdac1e80
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!